<resources>
    <string name="app_name">ViewGroupPerformance</string>
    <string name="menu_button">menu button</string>
    <string name="cover_image">cover image</string>
    <string name="movie_title">Red Sparrow</string>
    <string name="movie_desc">Drama | 2h 20m</string>
    <string name="movie_rating">IMDb 6.6/10</string>
    <string name="movie_status">In theaters</string>
    <string name="book_button">BOOK TICKETS</string>
    <string name="cast">CAST</string>
    <string name="more_casts">+9</string>
    <string name="cast_1">cast one</string>
    <string name="cast_3">cast three</string>
    <string name="cast_2">cast two</string>
    <string name="movie_info">Dominika Egorova, a former ballerina, enrols in a Russian Intelligence programme and becomes a sparrow, using her body as a weapon to entrap a CIA agent.</string>
    <string name="description_button">description button</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="movie_theater_name">The Space Cinema</string>
    <string name="theater_distance">1.6 km</string>
</resources>