<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/menu_button"
            app:srcCompat="@drawable/ic_scatter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cover_image"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/red_sparrow" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/movie_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/movie_desc" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cast"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/cast_one"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/cast_1"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/cast_1" />

                        <ImageView
                            android:id="@+id/cast_two"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/cast_2"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/cast_3" />

                        <ImageView
                            android:id="@+id/cast_three"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/cast_3"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/cast_2" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="16dp"
                            android:background="@color/gray"
                            android:text="@string/more_casts" />

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="36dp"
            android:text="@string/movie_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp">

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/black_bar"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/date_1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="20"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/day_1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday"
                        app:layout_constraintEnd_toStartOf="@+id/day_2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date_1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="21"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="22"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="23"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="24"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="25"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="44dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:paddingTop="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="26"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="@dimen/selector_side_padding"
                        android:paddingRight="@dimen/selector_side_padding"
                        android:paddingBottom="@dimen/selector_bottom_padding"
                        android:text="@string/sunday" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="150dp"
                android:orientation="vertical"
                android:paddingStart="100dp">

                <TextView
                    android:id="@+id/movie_theater_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_theater_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/movie_theater_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/theater_distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/containedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/brick_red"
        android:text="@string/book_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        app:icon="@drawable/ic_baseline_sort_24" />


</RelativeLayout>

